# wit

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.MD  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: master.yml  pull-request.yml  push.yml
assets/: bundle.sh
src/: main.rs
wit/: Cargo.toml  build.rs  package.json  tailwind.config.js
wit/src/: main.rs
wit/src/router/: api.rs  assets.rs  front.rs  git.rs  health_check.rs  mod.rs
wit/src/service/: git.rs
wit/src/service/git/: error.rs  mod.rs  model.rs
wit/templates/: _layout.html  base.html  blob-view.html  error.html  hello.html  repo-index.html  repo-tree.html
wit/templates/components/: base.html  blob-view.html  navigate.html
