[package]
name = "yags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
env_logger = "0.10.0"
mimalloc = { version = "0.1.37", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
chrono = "0.4.24"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
git2 = "0.17.2"
