[package]
name = "wit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
env_logger = "0.11.2"
mimalloc = { version = "0.1.39", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
chrono = "0.4.34"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
git2 = "0.18.2"
