[package]
name = "wit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/bikesheddev/askama.git", branch = "bump-axum-core-version", features = ["with-axum"] }
askama_axum = { git = "https://github.com/bikesheddev/askama.git", branch = "bump-axum-core-version" }
axum = "0.8.1"
git2 = { version = "0.20.0", default-features = false }
mimalloc = { version = "0.1.43", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
time = { version = "0.3.37", features = ["serde-human-readable"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["catch-panic", "compression-full", "cors", "fs", "propagate-header", "request-id", "sensitive-headers", "timeout", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.15.0"
