[package]
name = "wit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/bikesheddev/askama.git", branch = "bump-axum-core-version", features = ["with-axum"] }
askama_axum = { git = "https://github.com/bikesheddev/askama.git", branch = "bump-axum-core-version" }
axum = "0.8.1"
git2 = { version = "0.20.1", default-features = false }
mimalloc = { version = "0.1.44", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.40", features = ["serde-human-readable"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["catch-panic", "compression-full", "cors", "fs", "propagate-header", "request-id", "sensitive-headers", "timeout", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.19.0"
