[package]
name = "wit"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.15.6"
axum = "0.8.8"
git2 = { version = "0.20.4", default-features = false }
mimalloc = { version = "0.1.48", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["serde-human-readable"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["catch-panic", "compression-full", "cors", "fs", "propagate-header", "request-id", "sensitive-headers", "timeout", "trace", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
